--- a/mpesa-qr-frontend/package.json
+++ b/mpesa-qr-frontend/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
+    "html5-qrcode": "^2.3.8",
+    "qr-scanner": "^1.4.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
