--- a/mpesa-qr-frontend/package.json
+++ b/mpesa-qr-frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.11.0",
     "firebase": "^12.0.0",
     "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.536.0",
     "qr-scanner": "^1.4.2",
     "react": "^19.1.1",
